--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@netlify/functions": "^3.0.0",
     "@tailwindcss/typography": "^0.5.10",
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.9",
