--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && npm run generate-sitemap",
     "lint": "eslint .",
     "preview": "vite preview",
     "scheduler": "tsx src/scripts/startScheduler.ts",
-    "postinstall": "npm run build"
+    "postinstall": "npm run build",
+    "generate-sitemap": "node scripts/generateSitemap.js"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
@@ -48,10 +49,12 @@
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
+    "glob": "^10.3.10",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.446.0",
     "next-themes": "^0.3.0",
     "node-cron": "^3.0.3",
+    "prettier": "^3.2.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
